--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>phantekzy | Advanced Terminal Portfolio</title>
+  <title>phantekzy | Terminal Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
@@ -11,10 +11,9 @@
       --bg: #000;
       --text: #33ff33;
     }
-    .theme-matrix { --bg: #001100; --text: #00ff00; }
     .theme-ubuntu { --bg: #300a24; --text: #ff6600; }
-    .theme-dark   { --bg: #000;    --text: #fff;    }
-    .theme-light  { --bg: #fff;    --text: #000;    }
+    .theme-matrix { --bg: #001100; --text: #00ff00; }
+    .theme-light { --bg: #f5f5f5; --text: #222; }
 
     body {
       margin: 0;
@@ -46,76 +45,68 @@
       animation: blink .8s steps(1) infinite;
     }
     a { color: var(--text); text-decoration: underline; }
-    pre.ascii { margin: 0; line-height: 1; }
+    pre.ascii {
+      font-size: 10px;
+      white-space: pre-wrap;
+    }
   </style>
 </head>
 <body class="theme-matrix">
-  <div id="terminal"></div>
+  <div id="terminal">
+    <pre class="ascii">
+    __                          __             __                          
+       /\ \                        /\ \__         /\ \                         
+ _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ '\   ____    __  __    
+/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\\/\ \\/\ \   
+\ \ \L\ \\\ \ \ \ \\ \ \L\.\_ /\ \/\ \\\ \ \_ /\  __/ \ \ \\\`\\/_/  /_\\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
+   \ \_\                                                                 /\___/ 
+    \/_/                                                                 \/__/  
+    </pre>
+  </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const terminal = document.getElementById('terminal');
-      const themes = ['matrix','ubuntu','dark','light'];
+      const themes = ['matrix', 'ubuntu', 'light'];
       let history = [], histIdx = 0;
 
-      // 1) Banner ASCII + Socials at top
-      const banner = `
-<pre class="ascii">
-    __                          __             __                          
-   /\\ \\                        /\\ \\__         /\\ \\                         
-  _____ \\ \\ \\___       __       ___ \\ \\ ,_     __ \\ \\ \\'/   ____    __  __    
- /\\ '__\`\\\\ \\  _ \`\\   /'__\`\\   /' _ \`\\\\ \\ \\/   /'__\`\\\\ \\ , <  /\\_,\`\\ /\\ \\/\\ \\   
- \\ \\ \\L\\ \\ \\ \\ \\ \\/\\ \\L\\.\\_ /\\ \\/\\ \\\\ \\ \\_ /\\  __/ \\ \\ \\\\\\`\\\\/_/  /_\\ \\ \\_\\ \\  
-  \\ \\ ,__/ \\ \\_\\ \\_\\\\ \\__/\\.\\_\\\\ \\_\\ \\_\\\\ \\__/\\\\ \\____\\ \\ \\_\\ \\_\\/\\____\\\\/\\____ \\ 
-   \\ \\ \\/   \\/_/\\/_/ \\/__/\\/_/ \\/_/\\/_/ \\/__/ \\/____/  \\/_/\\/_/\\/____/ /___/> \\
-    \\ \\_\\                                                                 /\\___/ 
-     \\/_/                                                                 \\/__/  
-</pre>
-`;
-
-      const socialsBar = `
-GitHub: <a href="https://github.com/phantekzy" target="_blank">github.com/phantekzy</a> |
-LinkedIn: <a href="https://linkedin.com/in/maini-lotfi" target="_blank">maini-lotfi</a> |
-X: <a href="https://x.com/mainilotfi"    target="_blank">@mainilotfi</a> |
-YouTube: <a href="https://youtube.com/@phantekzy" target="_blank">@phantekzy</a> |
-Email: <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>
-`;
-
-      // 2) Content data
       const data = {
         about: `
 ## About Me
 
-I am a dedicated web developer with proven experience delivering responsive, high‑performance applications. My toolkit includes:
+I'm **Maini Lotfi**, a passionate and detail-oriented full-stack web developer with a strong foundation in frontend and backend technologies. I specialize in building clean, efficient, and accessible web interfaces. I'm self-taught and always evolving, with aspirations to move into cybersecurity.
 
-- **HTML5 & CSS3** for semantic, accessible markup  
-- **JavaScript (ES6+)**, **React**, **Node.js** for dynamic UIs & scalable backends  
-- **PHP & MySQL** for database‑driven solutions  
-- **Linux** & **Bash scripting** for efficient workflows  
-- **Git** for collaborative version control
-
-I prioritize clean, modular code, performance optimization, and exceptional user experience.
+**Tech Interests:**
+- Modern Web Development (React, Node.js, PHP)
+- DevOps & Linux Systems
+- Cybersecurity (learning in progress)
+- Clean Code & Best Practices
         `,
         skills: `
 - HTML5
 - CSS3
-- JavaScript (ES6+)
+- JavaScript
 - PHP
 - Node.js
 - React
 - MySQL
-- Linux & Bash
-- Git & GitHub
+        `,
+        socials: `
+- <a href="https://linkedin.com/in/maini-lotfi" target="_blank">LinkedIn</a>
+- <a href="https://x.com/mainilotfi" target="_blank">X / Twitter</a>
+- <a href="https://youtube.com/@phantekzy" target="_blank">YouTube</a>
+- <a href="mailto:mainilotfi@gmail.com">mainilotfi@gmail.com</a>
         `,
         goals: `
-- Build modern full‑stack web applications  
-- Master advanced JavaScript frameworks & backend patterns  
-- Implement secure coding best practices  
-- Contribute to open source and community projects
+- Build modern full-stack applications
+- Master backend frameworks and secure coding
+- Switch into cybersecurity
+- Contribute to open source projects
         `
       };
 
-      // 3) Command definitions
       const commands = {
         help() {
           print(`about | skills | projects | goals | theme [name] | socials | clear | exit`);
@@ -126,8 +117,22 @@ I prioritize clean, modular code, performance optimization, and exceptional user
         skills() {
           print(marked.parse(data.skills));
         },
+        socials() {
+          print(data.socials);
+        },
+        goals() {
+          print(marked.parse(data.goals));
+        },
+        theme(args) {
+          const name = args[1];
+          if (themes.includes(name)) {
+            document.body.className = 'theme-' + name;
+            print(`Theme set to ${name}`);
+          } else {
+            print(`Available themes: ${themes.join(', ')}`);
+          }
+        },
         projects: async () => {
-          terminal.innerHTML = '';
           print(`Fetching repositories from GitHub…`);
           try {
             const res = await fetch('https://api.github.com/users/phantekzy/repos?sort=updated');
@@ -141,21 +146,6 @@ I prioritize clean, modular code, performance optimization, and exceptional user
             print(`Error fetching projects: ${e.message}`);
           }
         },
-        goals() {
-          print(marked.parse(data.goals));
-        },
-        theme(args) {
-          const t = args[1];
-          if (themes.includes(t)) {
-            document.body.className = 'theme-' + t;
-            print(`Theme set to ${t}`);
-          } else {
-            print(`Available themes: ${themes.join(', ')}`);
-          }
-        },
-        socials() {
-          print(socialsBar);
-        },
         clear() {
           terminal.innerHTML = '';
         },
@@ -164,45 +154,63 @@ I prioritize clean, modular code, performance optimization, and exceptional user
         }
       };
 
-      // 4) Utilities
-      function print(html='') {
-        const d = document.createElement('div');
-        d.innerHTML = html;
-        terminal.appendChild(d);
+      function print(html = '') {
+        const div = document.createElement('div');
+        div.innerHTML = html;
+        terminal.appendChild(div);
         terminal.scrollTop = terminal.scrollHeight;
       }
+
       function newPrompt() {
-        const line = document.createElement('div'); line.className = 'line';
-        const p = document.createElement('span'); p.className = 'prompt'; p.textContent = '[phantekzy@portfolio ~]$ ';
-        const inp = document.createElement('input'); inp.id = 'cmdline'; inp.autocomplete = 'off';
-        line.append(p, inp); terminal.append(line); inp.focus(); addListeners(inp);
+        const line = document.createElement('div');
+        line.className = 'line';
+        const prompt = document.createElement('span');
+        prompt.className = 'prompt';
+        prompt.textContent = '[phantekzy@portfolio ~]$ ';
+        const input = document.createElement('input');
+        input.id = 'cmdline';
+        input.autocomplete = 'off';
+        line.append(prompt, input);
+        terminal.append(line);
+        input.focus();
+        addListeners(input);
+        terminal.scrollTop = terminal.scrollHeight;
       }
+
       function addListeners(input) {
         input.addEventListener('keydown', e => {
-          if (e.key==='Enter') {
-            const cmd = input.value.trim(); history.push(cmd); histIdx = history.length; input.disabled = true; execute(cmd);
-          }
-          else if (e.key==='ArrowUp' && histIdx>0)    input.value = history[--histIdx] || '';
-          else if (e.key==='ArrowDown') {
-            if (histIdx < history.length-1) input.value = history[++histIdx] || '';
+          if (e.key === 'Enter') {
+            const cmd = input.value.trim();
+            history.push(cmd);
+            histIdx = history.length;
+            input.disabled = true;
+            execute(cmd);
+          } else if (e.key === 'ArrowUp') {
+            if (histIdx > 0) input.value = history[--histIdx] || '';
+          } else if (e.key === 'ArrowDown') {
+            if (histIdx < history.length - 1) input.value = history[++histIdx] || '';
             else input.value = '';
-          }
-          else if (e.key==='Tab') {
-            e.preventDefault(); const val = input.value;
-            const matches = Object.keys(commands).filter(c=>c.startsWith(val));
-            if (matches.length===1) input.value = matches[0]+' ';
+          } else if (e.key === 'Tab') {
+            e.preventDefault();
+            autocomplete(input);
           }
         });
       }
-      function execute(input) {
-        if (!input) return newPrompt(); const args = input.split(' '), cmd = args[0];
-        (commands[cmd]||(() => print(`command not found: ${cmd}`)))(args);
-        if (cmd!=='exit') newPrompt();
+
+      function autocomplete(input) {
+        const val = input.value;
+        const matches = Object.keys(commands).filter(c => c.startsWith(val));
+        if (matches.length === 1) input.value = matches[0] + ' ';
       }
 
-      // 5) Bootstrap
-      print(banner);
-      print(socialsBar);
+      function execute(input) {
+        if (!input) return newPrompt();
+        const args = input.split(' ');
+        const cmd = args[0];
+        (commands[cmd] || (() => print(`command not found: ${cmd}`)))(args);
+        if (cmd !== 'exit') newPrompt();
+      }
+
       print(`<pre>Welcome to phantekzy's terminal portfolio. Type <code>help</code> to get started.</pre>`);
       newPrompt();
     });
